[package]
name = "tfidf-search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tiny_http = "0.12.0"
rust-stemmers = "1.2.0"
glob = "0.3.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
